// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

// buf breaking: ignore (currently does not require backward-compatibility)

syntax = "proto3";

package mz_storage_types.connections.aws;

import "repr/src/catalog_item_id.proto";
import "storage-types/src/connections/string_or_secret.proto";

message ProtoAwsConnection {
  oneof auth {
    ProtoAwsCredentials credentials = 1;
    ProtoAwsAssumeRole assume_role = 3;
  }
  optional string region = 2;
  optional string endpoint = 4;
}

message ProtoAwsCredentials {
  mz_storage_types.connections.string_or_secret.ProtoStringOrSecret access_key_id = 1;
  mz_repr.catalog_item_id.ProtoCatalogItemId secret_access_key = 2;
  optional mz_storage_types.connections.string_or_secret.ProtoStringOrSecret session_token = 3;
}

message ProtoAwsAssumeRole {
  string arn = 1;
  optional string session_name = 2;
}

message ProtoAwsConnectionReference {
  mz_repr.catalog_item_id.ProtoCatalogItemId connection_id = 1;
  ProtoAwsConnection connection = 2;
}
